--- a/iOS/LaunchScreen.storyboard
+++ b/iOS/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="ipad9_7" orientation="portrait">
+    <device id="ipad12_9" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -16,17 +16,17 @@
                         <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                    <view key="view" contentMode="scaleAspectFit" id="Ze5-6b-2t3" semanticContentAttribute="spatial" userInteractionEnabled="NO">
+                        <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" customColorSpace="sRGB" cocoaTouchSystemColor="lightTextColor"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="198" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" image="LaunchImage">
-                                <rect key="frame" x="0.0" y="-1" width="768" height="1025"/>
-                                <autoresizingMask key="autoresizingMask" heightSizable="YES" widthSizable="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="197" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" image="LogoOmal.png" opaque="NO" preservesSuperviewLayoutMargins="YES">
+                                <rect key="frame" x="558" y="444.5" width="239.5" height="127.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinX="YES" flexibleMaxY="YES" flexibleMinY="YES"/>
                             </imageView>
                         </subviews>
-                        <color key="tintColor" colorSpace="calibratedRGB" red="0.16078431372549021" green="0.44313725490196076" blue="0.996078431372549" alpha="1"/>
+                        <color key="tintColor" colorSpace="calibratedRGB" red="0.30980392156862746" green="0.57647058823529407" blue="0.77647058823529413" alpha="1"/>
+                        <color key="backgroundColor" colorSpace="calibratedRGB" red="0.30980392156862746" green="0.57647058823529407" blue="0.77647058823529413" alpha="1"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -35,29 +35,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="tab_about.png" width="32" height="30"/>
-        <image name="tab_feed.png" width="32" height="30"/>
-        <image name="xamarin_logo.png" width="220" height="51"/>
-        <image name="BasketPage.png" width="48" height="48"/>
-        <image name="OrdersPage.png" width="48" height="48"/>
-        <image name="Search.png" width="48" height="48"/>
-        <image name="Info.png" width="48" height="48"/>
-        <image name="LaunchScreenImages/Home_320x480.png" width="320" height="480"/>
-        <image name="LaunchScreenImages/Home_640x960.png" width="640" height="960"/>
-        <image name="LaunchScreenImages/Home_640x1136.png" width="640" height="1136"/>
-        <image name="LaunchScreenImages/Home_750x1334.png" width="750" height="1334"/>
-        <image name="LaunchScreenImages/Home_768x1004.png" width="768" height="1004"/>
-        <image name="LaunchScreenImages/Home_768x1024.png" width="768" height="1024"/>
-        <image name="LaunchScreenImages/Home_1024x768.png" width="1024" height="768"/>
-        <image name="LaunchScreenImages/Home_1242x2208.png" width="1242" height="2208"/>
-        <image name="LaunchScreenImages/Home_1536x2008.png" width="1536" height="2008"/>
-        <image name="LaunchScreenImages/Home_1536x2048.png" width="1536" height="2048"/>
-        <image name="LaunchScreenImages/Home_1920x1080.png" width="1920" height="1080"/>
-        <image name="LaunchScreenImages/Home_2048x1496.png" width="2048" height="1496"/>
-        <image name="LaunchScreenImages/Home_2048x1536.png" width="2048" height="1536"/>
-        <image name="LaunchScreenImages/Home_2048x2732.png" width="2048" height="2732"/>
-        <image name="LaunchScreenImages/Home_2208x1242.png" width="2208" height="1242"/>
         <image name="LogoOmal.png" width="1028" height="689"/>
+        <image name="Archivio.png" width="32" height="30"/>
+        <image name="Cerca.png" width="32" height="30"/>
+        <image name="Impostazioni.png" width="32" height="30"/>
+        <image name="Omal.png" width="32" height="30"/>
+        <image name="Ordini.png" width="32" height="30"/>
     </resources>
-    <color key="tintColor" colorSpace="calibratedRGB" red="0.16078431372549021" green="0.44313725490196076" blue="0.996078431372549" alpha="1"/>
 </document>
