--- a/Omal/Views/AnagraficaClientiV.xaml
+++ b/Omal/Views/AnagraficaClientiV.xaml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage
+<ContentPage BackgroundColor="White"
     xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+
     xmlns:Common="clr-namespace:Omal.Common"
     x:Class="Omal.Views.AnagraficaClientiV">
     <ContentPage.ToolbarItems>
         <Common:BindableToolbarItem IsVisible="{Binding IsLoggedIn, Converter={StaticResource InverseBooleanConverter}}" Text="{Binding LoginOrLogOutActionText}" Command="{Binding LoginOrLogoutCommand}" />
-        <Common:BindableToolbarItem IsVisible="{Binding IsLoggedIn}" Text="+" Command="{Binding AddNewCommand}" />
+        <Common:BindableToolbarItem IsVisible="{Binding IsLoggedIn}" Text="{Binding Aggiungi}" Command="{Binding AddNewCommand}" />
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout Orientation="Vertical"> 
-            <Label IsVisible="{Binding IsLoggedIn, Converter={StaticResource InverseBooleanConverter}}" Margin="10" HorizontalTextAlignment="Center" Style="{StaticResource Descrizione}" Text="Per utilizzare questa funzionalità è necessario effettuare login." />
-            <SearchBar Placeholder="Cerca..." Text="{Binding SearchText}"  IsVisible="{Binding IsLoggedIn}" />
-            <ListView  SelectedItem="{Binding ClienteSelected}" IsVisible="{Binding IsLoggedIn}" IsGroupingEnabled="true" ItemsSource="{Binding Clienti}" GroupShortNameBinding="{Binding TitoloCorto}" GroupDisplayBinding="{Binding Titolo}">
+            <Label IsVisible="{Binding IsLoggedIn, Converter={StaticResource InverseBooleanConverter}}" Margin="10" HorizontalTextAlignment="Center" Style="{StaticResource Descrizione}" Text="{Binding LogonRichiesto}" />
+            <SearchBar BackgroundColor="#60A5D1" TextColor="White"  Placeholder="{Binding ClienteRicercato}" Text="{Binding SearchText}"  IsVisible="{Binding IsLoggedIn}"  >
+                <SearchBar.IsVisible>
+                    <OnPlatform x:TypeArguments="x:Boolean"
+                          iOS="{Binding IsLoggedIn}"
+                          Android="false"/>
+                    </SearchBar.IsVisible>
+                </SearchBar>
+            <Entry TextColor="White"  BackgroundColor="#60A5D1" Placeholder="{Binding ClienteRicercato}" Text="{Binding SearchText}"  IsVisible="{Binding IsLoggedIn}" >
+                <Entry.IsVisible>
+                    <OnPlatform x:TypeArguments="x:Boolean"
+                          iOS="false"
+                          Android="{Binding IsLoggedIn}"/>
+                    </Entry.IsVisible>
+            </Entry>
+            <ListView SelectedItem="{Binding ClienteSelected}" IsVisible="{Binding IsLoggedIn}" IsGroupingEnabled="true" ItemsSource="{Binding Clienti}" GroupShortNameBinding="{Binding TitoloCorto}" GroupDisplayBinding="{Binding Titolo}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <TextCell Text="{Binding RagioneSociale}" Detail="{Binding CittaProvinciaNazione}" />
